--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Facial Recognition App</title>
+    <title>Smart Brain App</title>
   </head>
   <body>
     <div id="root"></div>
