--- a/public/index.html
+++ b/public/index.html
@@ -17,18 +17,19 @@
       href="%PUBLIC_URL%/manifest.json" />
     <link
       rel="apple-touch-icon"
+      type="image/png"
       sizes="180x180"
-      href="Favicon/apple-touch-icon.png" />
+      href="assets/favicon/apple-touch-icon.png" />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="Favicon/favicon-32x32.png" />
+      href="assets/favicon/favicon-32x32.png" />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="Favicon/favicon-16x16.png" />
+      href="assets/favicon/favicon-16x16.png" />
     <link
       rel="manifest"
       href="/site.webmanifest" />
